--- a/ChangeLog
+++ b/ChangeLog
@@ -4,14 +4,14 @@ retrosmart-aurorae-themes (1.3a) unstable; urgency=medium
     - Fixed in button shapes position.
     - Theme added: Moonlight.
 
- -- Manuel Domínguez López <@mail@>  Sun, 19 Oct 2019 08:32:22 +0200
+ -- Manuel Domínguez López <mdomlop@gmail.com>  Sun, 19 Oct 2019 08:32:22 +0200
 
 retrosmart-aurorae-themes (1.2a) unstable; urgency=medium
 
   * 1.2a.
     - Themes added: Babe, Lemon, Lime, and Breeze.
 
- -- Manuel Domínguez López <@mail@>  Sun, 18 Nov 2018 08:13:22 +0100
+ -- Manuel Domínguez López <mdomlop@gmail.com>  Sun, 18 Nov 2018 08:13:22 +0100
 
 retrosmart-aurorae-themes (1.1a) unstable; urgency=medium
 
@@ -20,10 +20,10 @@ retrosmart-aurorae-themes (1.1a) unstable; urgency=medium
     - Butane, Shadow, Heaven, Caelum, Forest and Laurum themes added.
     - Windows9x theme renamed to 9x.
 
- -- Manuel Domínguez López <@mail@>  Sat, 17 Nov 2018 08:13:22 +0100
+ -- Manuel Domínguez López <mdomlop@gmail.com>  Sat, 17 Nov 2018 08:13:22 +0100
 
 retrosmart-aurorae-themes (0.1a) unstable; urgency=medium
 
   * 0.1a.
 
- -- Manuel Domínguez López <@mail@>  Fri, 24 Nov 2017 07:06:07 +0100
+ -- Manuel Domínguez López <mdomlop@gmail.com>  Fri, 24 Nov 2017 07:06:07 +0100
