Help button now works. Preliminary shape.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+retrosmart-aurorae-themes (1.4b) unstable; urgency=medium
+
+  * 1.3b.
+    - Help button now works. Preliminary shape.
+
+ -- Manuel Domínguez López <mdomlop@gmail.com>  Thu, 24 Oct 2019 07:18:18 +0200
+
 retrosmart-aurorae-themes (1.3a) unstable; urgency=medium
 
   * 1.3a.
