--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+retrosmart-aurorae-themes (1.5) unstable; urgency=medium
+
+  * 1.5.
+    - Help button final shape.
+
+ -- Manuel Domínguez López <mdomlop@gmail.com>  Thu, 24 Oct 2019 08:13:04 +0200
+
 retrosmart-aurorae-themes (1.4b) unstable; urgency=medium
 
   * 1.4b.
